Fix sizing on mobile

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ html {
     --third-highlight-color: darkkhaki;
     --variable-font-size: 3.1vh;
     --font-family: 'Poppins', sans-serif;
+    --main-content-padding: 6vh;
 }
 
 
@@ -148,7 +149,7 @@ select:hover {
 }
 
 #__main_content_container__ {
-    padding: 6vh;
+    padding: var(--main-content-padding);
     background: rgb(256, 256, 256, .1);
     margin-bottom: 2vh;
 }
